# wine_review_chatloop

./: .gitignore  README.md  config.py  database_helper.py  dev.py  load_embeddings.py  pyproject.toml  setup_db.py  wine_reviews.py
cli/: console.py  main.py  streaming.py  url_extractor.py
core/: memory.py  models.py  search.py
plans/: db-performance-improvements.md  gradio-ui-improvements.md  summarization-performance-improvements.md
