[project]
name = "wine-review-chatloop"
version = "0.1.0"
description = ""
authors = [
    {name = "Saurabh Kamboj",email = "skamboj97@gmail.com"}
]
readme = "README.md"
requires-python = "<3.14,>=3.10"
dependencies = [
    "psycopg2 (>=2.9.10,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "openai (>=1.108.0,<2.0.0)",
    "gradio (>=5.46.0,<6.0.0)",
    "arize-otel (>=0.10.0,<0.11.0)",
    "openinference-instrumentation-openai (>=0.1.32,<0.2.0)",
    "opentelemetry-exporter-otlp (>=1.37.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
